deploymentRabbitMQ.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3.8-management
          name: rabbitmq
          resources: {}
          ports:
            - containerPort: 5672
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rabbitmq
  name: rabbitmqservice
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
      name: http
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rabbitmq
  name: rabbitmqmanagementservice
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 15672
      targetPort: 15672
      protocol: TCP
      name: http
  type: NodePort
