deploymentSIT.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: demowithdocker-deployment-sit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demowithdocker-sit
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demowithdocker-sit
    spec:
      containers:
        - image: satwinder1983/demowithdocker
          name: demowithdocker-container-sit
          resources: {}
          ports:
            - containerPort: 8080
          readinessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             initialDelaySeconds: 30
             timeoutSeconds: 1
          livenessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             initialDelaySeconds: 120
             timeoutSeconds: 1
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: demowithdocker-service-sit
spec:
  selector:
    app: demowithdocker-sit
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  type: NodePort
