deploymentWithIngress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: demowithdocker
  name: demowithdocker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demowithdocker
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demowithdocker
    spec:
      containers:
        - image: satwinder1983/demowithdocker
          name: demowithdocker
          resources: {}
          ports:
            - containerPort: 8080
          readinessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             initialDelaySeconds: 30
             timeoutSeconds: 1
          livenessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             initialDelaySeconds: 120
             timeoutSeconds: 1
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: demowithdocker
  name: demowithdocker
spec:
  selector:
    app: demowithdocker
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  type: NodePort

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: default
  name: demo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /demo/sayHello
            backend:
              serviceName: demowithdocker
              servicePort: 80
