deploymentWithIngressAnotherApp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test
  name: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test
    spec:
      containers:
        - image: satwinder1983/test
          name: test
          resources: {}
          ports:
            - containerPort: 8080
          readinessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             initialDelaySeconds: 30
             timeoutSeconds: 1
          livenessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             initialDelaySeconds: 120
             timeoutSeconds: 1
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test
  name: test
spec:
  selector:
    app: test
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: default
  name: test-ingress
spec:
  rules:
    - http:
        paths:
          - path: /test/api/customers/getAll
            backend:
              serviceName: test
              servicePort: 80
